fix dropdown falling off screen

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,6 +1,6 @@
 /* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: rgb(151,154,136);
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -18,6 +18,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
+    right: 0;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -41,5 +42,6 @@
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: white;
+    color: rgb(151,154,136);
 }
